tests/2026-09-09_15-44-31/05-firewall-nftables.log
### [Full nftables Ruleset] :: nft list ruleset
--- Executed at 2026-09-09T15:44:32Z ---
# Warning: table ip filter is managed by iptables-nft, do not touch!
table ip filter {
	chain INPUT {
		type filter hook input priority filter; policy accept;
		counter packets 63 bytes 7325 jump nixos-fw
	}

	chain nixos-drop {
		counter packets 0 bytes 0 drop
	}

	chain nixos-fw-accept {
		counter packets 49 bytes 5498 accept
	}

	chain nixos-fw-refuse {
		counter packets 14 bytes 1827 drop
	}

	chain nixos-fw-log-refuse {
		pkttype != unicast counter packets 11 bytes 1678 jump nixos-fw-refuse
		counter packets 3 bytes 149 jump nixos-fw-refuse
	}

	chain nixos-fw {
		udp dport 45790 counter packets 0 bytes 0 jump nixos-fw-accept
		iifname "awg0" counter packets 0 bytes 0 jump nixos-fw-accept
		iifname "lo" counter packets 4 bytes 338 jump nixos-fw-accept
		ct state related,established counter packets 45 bytes 5160 jump nixos-fw-accept
		ip protocol icmp icmp type echo-request counter packets 0 bytes 0 jump nixos-fw-accept
		counter packets 14 bytes 1827 jump nixos-fw-log-refuse
	}
}
# Warning: table ip6 filter is managed by iptables-nft, do not touch!
table ip6 filter {
	chain INPUT {
		type filter hook input priority filter; policy accept;
		counter packets 0 bytes 0 jump nixos-fw
	}

	chain nixos-drop {
		counter packets 0 bytes 0 drop
	}

	chain nixos-fw-accept {
		counter packets 0 bytes 0 accept
	}

	chain nixos-fw-refuse {
		counter packets 0 bytes 0 drop
	}

	chain nixos-fw-log-refuse {
		pkttype != unicast counter packets 0 bytes 0 jump nixos-fw-refuse
		counter packets 0 bytes 0 jump nixos-fw-refuse
	}

	chain nixos-fw {
		udp dport 45790 counter packets 0 bytes 0 jump nixos-fw-accept
		iifname "awg0" counter packets 0 bytes 0 jump nixos-fw-accept
		iifname "lo" counter packets 0 bytes 0 jump nixos-fw-accept
		ct state related,established counter packets 0 bytes 0 jump nixos-fw-accept
		meta l4proto ipv6-icmp icmpv6 type nd-redirect counter packets 0 bytes 0 drop
		meta l4proto ipv6-icmp xt match "icmp6" counter packets 0 bytes 0 drop
		meta l4proto ipv6-icmp counter packets 0 bytes 0 jump nixos-fw-accept
		ip6 daddr fe80::/64 udp dport 546 counter packets 0 bytes 0 jump nixos-fw-accept
		counter packets 0 bytes 0 jump nixos-fw-log-refuse
	}
}
# Warning: table ip mangle is managed by iptables-nft, do not touch!
table ip mangle {
	chain PREROUTING {
		type filter hook prerouting priority mangle; policy accept;
		ip protocol udp  counter packets 51 bytes 6036 meta mark set ct mark
		counter packets 63 bytes 7325 jump nixos-fw-rpfilter
	}

	chain POSTROUTING {
		type filter hook postrouting priority mangle; policy accept;
		ip protocol udp meta mark 0x0000ca6c  counter packets 74 bytes 6115 ct mark set mark
	}

	chain nixos-fw-rpfilter {
		fib saddr . mark oif != 0 counter packets 63 bytes 7325 return
		udp sport 67 udp dport 68 counter packets 0 bytes 0 return
		ip saddr 0.0.0.0 ip daddr 255.255.255.255 udp sport 68 udp dport 67 counter packets 0 bytes 0 return
		counter packets 0 bytes 0 drop
	}
}
# Warning: table ip6 mangle is managed by iptables-nft, do not touch!
table ip6 mangle {
	chain PREROUTING {
		type filter hook prerouting priority mangle; policy accept;
		meta l4proto udp  counter packets 0 bytes 0 meta mark set ct mark
		counter packets 0 bytes 0 jump nixos-fw-rpfilter
	}

	chain POSTROUTING {
		type filter hook postrouting priority mangle; policy accept;
		meta l4proto udp meta mark 0x0000ca6c  counter packets 0 bytes 0 ct mark set mark
	}

	chain nixos-fw-rpfilter {
		fib saddr . mark oif != 0 counter packets 0 bytes 0 return
		counter packets 0 bytes 0 drop
	}
}
# Warning: table ip raw is managed by iptables-nft, do not touch!
table ip raw {
	chain PREROUTING {
		type filter hook prerouting priority raw; policy accept;
		ip daddr 10.8.1.11 iifname != "awg0" fib saddr type != local  counter packets 0 bytes 0 drop
	}
}
table inet awg_bypass {
	set bypass_v4 {
		type ipv4_addr
		timeout 1h
		elements = { 75.2.60.5 expires 59m59s90ms,
			     99.83.231.61 expires 59m59s94ms,
			     140.82.121.3 expires 59m59s36ms }
	}

	set bypass_v6 {
		type ipv6_addr
		timeout 1h
	}

	chain output {
		type route hook output priority mangle; policy accept;
		ip daddr { 1.0.0.1, 1.1.1.1 } meta mark set 0x0000ca6c
		ip daddr @bypass_v4 meta mark set 0x0000ca6c
		ip6 daddr @bypass_v6 meta mark set 0x0000ca6c
	}

	chain postrouting {
		type nat hook postrouting priority srcnat; policy accept;
		ip daddr { 1.0.0.1, 1.1.1.1 } masquerade
		ip daddr @bypass_v4 masquerade
		ip6 daddr @bypass_v6 masquerade
	}
}


### [Table inet awg_bypass] :: nft list table inet awg_bypass
--- Executed at 2026-09-09T15:44:32Z ---
table inet awg_bypass {
	set bypass_v4 {
		type ipv4_addr
		timeout 1h
		elements = { 75.2.60.5 expires 59m59s61ms,
			     99.83.231.61 expires 59m59s65ms,
			     140.82.121.3 expires 59m59s7ms }
	}

	set bypass_v6 {
		type ipv6_addr
		timeout 1h
	}

	chain output {
		type route hook output priority mangle; policy accept;
		ip daddr { 1.0.0.1, 1.1.1.1 } meta mark set 0x0000ca6c
		ip daddr @bypass_v4 meta mark set 0x0000ca6c
		ip6 daddr @bypass_v6 meta mark set 0x0000ca6c
	}

	chain postrouting {
		type nat hook postrouting priority srcnat; policy accept;
		ip daddr { 1.0.0.1, 1.1.1.1 } masquerade
		ip daddr @bypass_v4 masquerade
		ip6 daddr @bypass_v6 masquerade
	}
}


### [Set inet awg_bypass bypass_v4] :: nft list set inet awg_bypass bypass_v4
--- Executed at 2026-09-09T15:44:32Z ---
table inet awg_bypass {
	set bypass_v4 {
		type ipv4_addr
		timeout 1h
		elements = { 75.2.60.5 expires 59m59s51ms,
			     99.83.231.61 expires 59m59s55ms,
			     140.82.121.3 expires 59m58s997ms }
	}
}


### [Set inet awg_bypass bypass_v6] :: nft list set inet awg_bypass bypass_v6
--- Executed at 2026-09-09T15:44:32Z ---
table inet awg_bypass {
	set bypass_v6 {
		type ipv6_addr
		timeout 1h
	}
}


### [iptables Filter Rules] :: iptables -S
--- Executed at 2026-09-09T15:44:32Z ---
-P INPUT ACCEPT
-P FORWARD ACCEPT
-P OUTPUT ACCEPT
-N nixos-drop
-N nixos-fw
-N nixos-fw-accept
-N nixos-fw-log-refuse
-N nixos-fw-refuse
-A INPUT -j nixos-fw
-A nixos-drop -j DROP
-A nixos-fw -p udp -m udp --dport 45790 -j nixos-fw-accept
-A nixos-fw -i awg0 -j nixos-fw-accept
-A nixos-fw -i lo -j nixos-fw-accept
-A nixos-fw -m conntrack --ctstate RELATED,ESTABLISHED -j nixos-fw-accept
-A nixos-fw -p icmp -m icmp --icmp-type 8 -j nixos-fw-accept
-A nixos-fw -j nixos-fw-log-refuse
-A nixos-fw-accept -j ACCEPT
-A nixos-fw-log-refuse -m pkttype ! --pkt-type unicast -j nixos-fw-refuse
-A nixos-fw-log-refuse -j nixos-fw-refuse
-A nixos-fw-refuse -j DROP


### [iptables NAT Rules] :: iptables -t nat -S
--- Executed at 2026-09-09T15:44:32Z ---
-P PREROUTING ACCEPT
-P INPUT ACCEPT
-P OUTPUT ACCEPT
-P POSTROUTING ACCEPT


### [iptables Mangle Rules] :: iptables -t mangle -S
--- Executed at 2026-09-09T15:44:32Z ---
-P PREROUTING ACCEPT
-P INPUT ACCEPT
-P FORWARD ACCEPT
-P OUTPUT ACCEPT
-P POSTROUTING ACCEPT
-N nixos-fw-rpfilter
-A PREROUTING -p udp -m comment --comment "awg-quick(8) rule for awg0" -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A PREROUTING -j nixos-fw-rpfilter
-A POSTROUTING -p udp -m mark --mark 0xca6c -m comment --comment "awg-quick(8) rule for awg0" -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A nixos-fw-rpfilter -m rpfilter --loose --validmark -j RETURN
-A nixos-fw-rpfilter -p udp -m udp --sport 67 --dport 68 -j RETURN
-A nixos-fw-rpfilter -s 0.0.0.0/32 -d 255.255.255.255/32 -p udp -m udp --sport 68 --dport 67 -j RETURN
-A nixos-fw-rpfilter -j DROP
